Upgrade MooTools to 1.5.2, remove touch support patches
Fixes task #2960.  Except that it doesn’t, because the MT change for
“Add touch events to Drag” doesn’t seem to work (on the iOS simulator
at least).  I’m removing the legacy `mootools_extras` files anyway,
because the UI is still usable without drag and I don’t want all that
extra code bolted on just to support a niche use case.  There are lot
of other desirable fixes in 1.5.2.  1.6 is out now but has some more
dangerous looking changes.

--- a/src/imageserver/templates/base_blank.html
+++ b/src/imageserver/templates/base_blank.html
@@ -6,7 +6,7 @@
 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="description" content="Quru Image Server - dynamic imaging for web and print"/>
-	<meta name="viewport" content="width = device-width"/>
+	<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=yes"/>
 	<meta name="csrf-token" content="{{ csrf_token() }}">
 
 	{% block caching_head %}
