--- a/src/imageserver/static/styles/base.css
+++ b/src/imageserver/static/styles/base.css
@@ -39,7 +39,7 @@ iframe {
 
 /* Hyperlink styles
  */
-a:link, a:visited, a:hover, a:active {
+a {
 	text-decoration: none;
 	color: black;
 	border-bottom: 1px dotted black;
