--- a/src/imageserver/templates/upload_complete.html
+++ b/src/imageserver/templates/upload_complete.html
@@ -53,7 +53,11 @@
 
 		<div class="tall uploadresult">
 			<a href="{{ url_for('details', src=image.src) }}">
-				<img class="border shadow" src="{{ url_for('image', src=image.src, format='jpg', width=200, height=200, stats=0) }}" />
+				{% if settings['IMAGE_UPLOADED_TEMPLATE'] %}
+				<img class="border shadow" src="{{ url_for('image', src=image.src, tmp=settings['IMAGE_UPLOADED_TEMPLATE']) }}" />
+				{% else %}
+				<img class="border shadow" src="{{ url_for_thumbnail(src=image.src) }}" />
+				{% endif %}
 			</a>
 			<a href="{{ url_for('details', src=image.src) }}">View image details</a><br/>
 			<a href="{{ url_for('publish', src=image.src) }}">Publish this image</a><br/>
@@ -63,7 +67,7 @@ HTML snippets:<br>
 {% if settings['IMAGE_UPLOADED_TEMPLATE'] %}
 &lt;img src="{{ external_url_for('image', src=image.src) }}&amp;tmp={{settings['IMAGE_UPLOADED_TEMPLATE']}}"&gt;
 {% else %}
-&lt;img src="{{ external_url_for('image', src=image.src) }}&amp;width=200&amp;height=200&amp;format=jpg"&gt;
+&lt;img src="{{ url_for_thumbnail(src=image.src, external=True, stats=True) }}"&gt;
 {% endif %}
 &lt;!-- To link to the original image --&gt;
 &lt;img src="{{ external_url_for('original', src=image.src) }}"&gt;
