--- a/src/imageserver/static/styles/base.css
+++ b/src/imageserver/static/styles/base.css
@@ -63,14 +63,16 @@ h1 {
 	font-size: 180%;
 }
 h1 span {
-	font-size: 56%;
+	/* back to 100% = font-size: 56%; / to 95% (table text) = 53% */
+	font-size: 53%;
 }
 h2 {
 	font-size: 130%;
 	margin-bottom: 0.3em;
 }
 h2 span {
-	font-size: 77%;
+	/* back to 100% = font-size: 77%; / to 95% (table text) = 73% */
+	font-size: 73%;
 }
 h3, h4 {
 	font-size: 110%;
@@ -78,7 +80,8 @@ h3, h4 {
 	font-style: italic;
 }
 h3 span, h4 span {
-	font-size: 91%;
+	/* back to 100% = font-size: 91%; / to 95% (table text) = 86% */
+	font-size: 86%;
 }
 
 /* Misc HTML element styles
@@ -177,6 +180,8 @@ fieldset div {
  */
 .action_menu_owner {
 	cursor: pointer;
+	display: inline-block;
+	margin-top: 0.5em;
 }
 .action_menu {
 	position: absolute;
