--- a/src/imageserver/templates/list.html
+++ b/src/imageserver/templates/list.html
@@ -38,14 +38,18 @@
 
 {% block body %}
 	<h2>Listing of {{ directory_info.name() }}</h2>
+	<div class="smalltext">
+		Total folder size: {{ directory_info.size()|filesizeformat }}
+	</div>
 	{% if err_msg %}
 		<br/>
 		<div class="error">{{ err_msg|newlines }}</div>
 	{% else %}
 		{% if db_info and db_info.status == STATUS_ACTIVE %}
-			<img src="{{ url_for('static', filename='images/icon-action.png') }}"
-			     class="action_menu_owner" 
-			     id="folder_action_menu_owner" />
+			<div id="folder_action_menu_owner" class="action_menu_owner">
+				<img src="{{ url_for('static', filename='images/icon-action.png') }}" />
+				&nbsp;<span class="smalltext">Folder actions</span>
+			</div>
 			<div id="folder_action_menu" class="action_menu border shadow">
 				<ul>
 					{# Offer an Upload link if this isn't the root directory #}
@@ -88,17 +92,10 @@
 					{% endif %}
 				</ul>
 			</div>
-		</div>
-		&nbsp;
 		{% endif %}
-		<span class="smalltext">
-			Total folder size: {{ directory_info.size()|filesizeformat }}
-		</span>
-		<div class="view-icons">
-			<span class="smalltext">
-				Change view
-			</span>
-			&nbsp;
+
+		<div class="view_icons rfloat">
+			<span class="smalltext">Change view</span> &nbsp;
 			<a href="{{ url_for('browse', path=directory_info.name(), view='list') }}" class="no-underline" title="List view">
 				<img src="{{ url_for('static', filename='images/icon-view-list.png') }}" alt="List view" />
 			</a>
