--- a/src/imageserver/templates/inc_list_list_mode.html
+++ b/src/imageserver/templates/inc_list_list_mode.html
@@ -54,7 +54,7 @@
 						<img src="{{ url_for('static', filename='images/icon-folder.png') }}" alt="Folder"/>
 						</a>
 						{% else %}
-						<img {{ vdisabled_attrs }} src="{{ url_for('static', filename='images/icon-folder.png') }}" />
+						<img {{ vdisabled_attrs }} src="{{ url_for('static', filename='images/icon-folder.png') }}" alt="Folder"/>
 						{% endif %}
 					</td>
 					<td>&nbsp;</td>
