--- a/src/imageserver/static/styles/list.css
+++ b/src/imageserver/static/styles/list.css
@@ -68,7 +68,26 @@ td.count {
 .grid-cell {
 	display: inline-block;
 	margin: 1em;
-	width: 200px;  /* expects preview image of 200x200 */
-	height: 200px;
+	width: 200px;   /* expects preview image of 200x200 */
+	height: 240px;  /* plus 40px for filename and info  */
 	padding: 10px;
+	overflow: hidden;
+}
+.grid-cell.single-line {
+	line-height: 230px;
+	text-align: center;
+	vertical-align: middle;
+}
+.grid-cell.directory {
+	text-align: center;
+}
+.grid-cell .image-placeholder {
+	/* For thumbnails that are returned smaller than 200x200 */
+	width: 200px;
+	height: 200px;
+	line-height: 200px;
+	text-align: center;
+	vertical-align: middle;
+	/* For all thumbnails */
+	margin-bottom: 3px;
 }
