--- a/src/imageserver/templates/inc_list_grid_mode.html
+++ b/src/imageserver/templates/inc_list_grid_mode.html
@@ -15,7 +15,7 @@
 		{# Offer a Back link if this isn't the root directory #}
 		{% if directory_info.parent_name() %}
 			{% set back_url = url_for('browse', path=directory_info.parent_name()) %}
-			<div class="grid-cell border even">
+			<div class="grid-cell border even single-line">
 				<a class="no-underline" href="{{ back_url }}">
 					<img src="{{ url_for('static', filename='images/icon-back.png') }}" alt="Back"/>
 				</a>
@@ -31,17 +31,16 @@
 				{% set view_url = url_for('browse', path=sub_folder_path) %}
 				{% set view_permitted = is_folder_permitted(sub_folder_path, FolderPermission.ACCESS_VIEW) %}
 
-				<div class="grid-cell border even">
+				<div class="grid-cell border even directory">
 					{% if view_permitted %}
 					<a class="no-underline" href="{{ view_url }}">
-						<img src="{{ url_for('static', filename='images/icon-folder.png') }}" alt="Folder"/>
+						<img src="{{ url_for('static', filename='images/icon-folder.png') }}" alt="Folder" />
 					</a>
+					<div><a class="no-underline" href="{{ view_url }}">{{ entry.filename }}</a></div>
 					{% else %}
-					<img {{ vdisabled_attrs }} src="{{ url_for('static', filename='images/icon-folder.png') }}" />
+					<img {{ vdisabled_attrs }} src="{{ url_for('static', filename='images/icon-folder.png') }}" alt="Folder" />
+					<div {{ vdisabled_attrs }}>{{ entry.filename }}</div>
 					{% endif %}
-					<div>
-						{{ entry.filename }}
-					</div>
 				</div>
 			{% else %}
 				{% set fpath = (directory_info.name() + pathsep) if directory_info.name() != pathsep else '' %}
@@ -49,18 +48,27 @@
 				{% set view_url = url_for('details', src=fpath + entry.filename) %}
 				{% set can_view = entry.filename|fileextension in image_formats %}
 
+				{% if can_view %}
 				<div class="grid-cell border even">
-					{% if can_view %}
+					<div class="image-placeholder">
 						<a class="no-underline" href="{{ view_url }}">
-							<img src="{{ thumb_url }}" />
+						<img src="{{ thumb_url }}" />
 						</a>
-					{% else %}
-						<img src="{{ url_for('static', filename='images/icon-file.png') }}" alt="File"/>
-					{% endif %}
-					<div>
-						{{ entry.filename }}
 					</div>
+					<div><a class="no-underline" href="{{ view_url }}">{{ entry.filename }}</a></div>
+					<div class="float"><a class="no-underline" href="{{ view_url }}">{{ entry.modified|datetimeformat(True) }}</a></div>
+					<div class="rfloat"><a class="no-underline" href="{{ view_url }}">{{ entry.size|filesizeformat }}</a></div>
 				</div>
+				{% else %}
+				<div class="grid-cell border even">
+					<div class="image-placeholder">
+						<img src="{{ url_for('static', filename='images/icon-file.png') }}" alt="File" />
+					</div>
+					<div>{{ entry.filename }}</div>
+					<div class="float">{{ entry.modified|datetimeformat(True) }}</div>
+					<div class="rfloat">{{ entry.size|filesizeformat }}</div>
+				</div>
+				{% endif %}
 			{% endif %}
 		{% endfor %}
 
