--- a/src/imageserver/templates/folder_list.html
+++ b/src/imageserver/templates/folder_list.html
@@ -109,10 +109,10 @@
 					<td>
 						{% if view_permitted %}
 						<a href="{{ view_url }}">
-						<img src="{{ url_for('static', filename='images/icon-folder.png') }}" alt="Folder"/>
+						<img src="{{ url_for('static', filename='images/icon-folder-16.png') }}" alt="Folder"/>
 						</a>
 						{% else %}
-						<img {{ vdisabled_attrs }} src="{{ url_for('static', filename='images/icon-folder.png') }}" />
+						<img {{ vdisabled_attrs }} src="{{ url_for('static', filename='images/icon-folder-16.png') }}" />
 						{% endif %}
 					</td>
 					<td>
@@ -137,9 +137,9 @@
 
 					<td>
 						{% if can_view %}
-						<img src="{{ url_for('static', filename='images/icon-image.png') }}" alt="Image"/>
+						<img src="{{ url_for('static', filename='images/icon-image-16.png') }}" alt="Image"/>
 						{% else %}
-						<img src="{{ url_for('static', filename='images/icon-file.png') }}" alt="File"/>
+						<img src="{{ url_for('static', filename='images/icon-file-16.png') }}" alt="File"/>
 						{% endif %}
 					</td>
 					<td>
