Update readme with v2 screen shots

--- a/src/imageserver/templates/publish.html
+++ b/src/imageserver/templates/publish.html
@@ -49,8 +49,8 @@
 			// Templates
 			'loading': 'Loading details...',
 			'loading_failed': 'Failed to load template details',
-			'template_labels': 'Template values are shown below with red labels',
-			'default_template_labels': 'Default values are shown below with red labels',
+			'template_labels': 'Items set by the template are shown below with red labels',
+			'default_template_labels': 'Items set by the default template are shown below with red labels',
 			'reset_changes': 'Undo your changes',
 			// Warnings
 			'warn_size': 'The image will not be enlarged beyond its original size',
