--- a/src/imageserver/templates/inc_list_list_mode.html
+++ b/src/imageserver/templates/inc_list_list_mode.html
@@ -9,7 +9,7 @@
     image_formats   - a list of viewable image file extensions
 #}
 
-		<!-- List view (marker: test suite looks for me) -->
+		<!-- List view (marker: the test suite looks for me) -->
 		<table width="100%" 
 		       summary="Listing of the {{ directory_info.name() }} folder">
 
