--- a/src/imageserver/templates/base_blank_js.html
+++ b/src/imageserver/templates/base_blank_js.html
@@ -1,11 +1,11 @@
 {% extends "base_blank.html" %}
 {% block base_head %}
 	{% if settings.DEBUG %}
-	<script src="{{ url_for('static', filename='js/mootools-core.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('static', filename='js/mootools-more.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/lib/mootools-core.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/lib/mootools-more.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/base.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/mootools_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/lib/mootools_yc.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/base_yc.js') }}" type="text/javascript"></script>
 	{% endif %}
 {% endblock %}
