--- a/src/imageserver/templates/publish/output_img_tag_gallery.html
+++ b/src/imageserver/templates/publish/output_img_tag_gallery.html
@@ -5,7 +5,7 @@
 <!-- These lines need to go into your HTML &lt;head&gt; section -->
 &lt;link type="text/css" rel="stylesheet" href="{static_url}styles/canvas_view.css"&gt;
 &lt;link type="text/css" rel="stylesheet" href="{static_url}styles/gallery_view.css"&gt;
-&lt;script type="text/javascript" src="{static_url}js/mootools_yc.js"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="{static_url}js/lib/mootools_yc.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript" src="{static_url}js/canvas_view_yc.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript" src="{static_url}js/gallery_view_yc.js"&gt;&lt;/script&gt;
 
