--- a/src/imageserver/admin/templates/admin_maintenance.html
+++ b/src/imageserver/admin/templates/admin_maintenance.html
@@ -25,7 +25,7 @@
 	{% if settings.DEBUG %}
 	<script src="{{ url_for('static', filename='js/lib/picker.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/lib/picker_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/lib/picker.min.js') }}" type="text/javascript"></script>
 	{% endif %}
 	
 {% endblock %}
