--- a/src/imageserver/admin/templates/admin_template_edit.html
+++ b/src/imageserver/admin/templates/admin_template_edit.html
@@ -33,7 +33,7 @@
 	{% if settings.DEBUG %}
 	<script src="{{ url_for('static', filename='js/preview_popup.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/preview_popup_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/preview_popup.min.js') }}" type="text/javascript"></script>
 	{% endif%}
 {% endblock %}
 
