--- a/src/imageserver/reports/templates/reports_inc_chart_head.html
+++ b/src/imageserver/reports/templates/reports_inc_chart_head.html
@@ -17,9 +17,9 @@
 	<script src="{{ url_for('reports.static', filename='js/chart.js') }}" type="text/javascript"></script>
 	{% else %}
 	<!--[if lte IE 8]>
-	<script src="{{ url_for('static', filename='js/excanvas_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/excanvas.min.js') }}" type="text/javascript"></script>
 	<![endif]-->
-	<script src="{{ url_for('static', filename='js/lib/picker_yc.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('reports.static', filename='js/lib/mooflot_yc.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('reports.static', filename='js/chart_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/lib/picker.min.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('reports.static', filename='js/lib/mooflot.min.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('reports.static', filename='js/chart.min.js') }}" type="text/javascript"></script>
 	{% endif %}
