--- a/src/imageserver/reports/templates/reports_system_stats.html
+++ b/src/imageserver/reports/templates/reports_system_stats.html
@@ -26,7 +26,7 @@
 	{% if settings.DEBUG %}
 	<script src="{{ url_for('reports.static', filename='js/system_stats.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('reports.static', filename='js/system_stats_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('reports.static', filename='js/system_stats.min.js') }}" type="text/javascript"></script>
 	{% endif %}
 {% endblock %}
 
