--- a/src/imageserver/templates/account_edit.html
+++ b/src/imageserver/templates/account_edit.html
@@ -23,7 +23,7 @@
 	{% if settings.DEBUG %}
 	<script src="{{ url_for('static', filename='js/account_edit.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/account_edit_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/account_edit.min.js') }}" type="text/javascript"></script>
 	{% endif %}	
 {% endblock %}
 
