--- a/src/imageserver/templates/base_blank_js.html
+++ b/src/imageserver/templates/base_blank_js.html
@@ -5,7 +5,7 @@
 	<script src="{{ url_for('static', filename='js/lib/mootools-more.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/base.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/lib/mootools_yc.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('static', filename='js/base_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/lib/mootools.min.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/base.min.js') }}" type="text/javascript"></script>
 	{% endif %}
 {% endblock %}
