--- a/src/imageserver/templates/details.html
+++ b/src/imageserver/templates/details.html
@@ -28,7 +28,7 @@
     {% if settings.DEBUG %}
     <script src="{{ url_for('static', filename='js/details.js') }}" type="text/javascript"></script>
     {% else %}
-    <script src="{{ url_for('static', filename='js/details_yc.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='js/details.min.js') }}" type="text/javascript"></script>
     {% endif%}
 
     {% if geo_info %}
