--- a/src/imageserver/templates/details_edit.html
+++ b/src/imageserver/templates/details_edit.html
@@ -25,7 +25,7 @@
 	{% if settings.DEBUG %}
 	<script src="{{ url_for('static', filename='js/details_edit.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/details_edit_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/details_edit.min.js') }}" type="text/javascript"></script>
 	{% endif %}	
 {% endblock %}
 
