--- a/src/imageserver/templates/folder_list.html
+++ b/src/imageserver/templates/folder_list.html
@@ -27,7 +27,7 @@
 	{% if settings.DEBUG %}
 	<script src="{{ url_for('static', filename='js/list.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/list_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/list.min.js') }}" type="text/javascript"></script>
 	{% endif %}
 {% endblock %}
 
