--- a/src/imageserver/templates/gallery_view.html
+++ b/src/imageserver/templates/gallery_view.html
@@ -32,10 +32,10 @@
 	<script src="{{ url_for('static', filename='js/gallery_view.js') }}" type="text/javascript"></script>
 	{% else %}
 	<!--[if lte IE 8]>
-	<script src="{{ url_for('static', filename='js/excanvas_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/excanvas.min.js') }}" type="text/javascript"></script>
 	<![endif]-->
-	<script src="{{ url_for('static', filename='js/canvas_view_yc.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('static', filename='js/gallery_view_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/canvas_view.min.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/gallery_view.min.js') }}" type="text/javascript"></script>
 	{% endif %}
 	
 	<script type="text/javascript">
