--- a/src/imageserver/templates/list.html
+++ b/src/imageserver/templates/list.html
@@ -28,8 +28,8 @@
 	<script src="{{ url_for('static', filename='js/preview_popup.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/list.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/preview_popup_yc.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('static', filename='js/list_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/preview_popup.min.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/list.min.js') }}" type="text/javascript"></script>
 	{% endif %}
 {% endblock %}
 
