--- a/src/imageserver/templates/publish.html
+++ b/src/imageserver/templates/publish.html
@@ -70,9 +70,9 @@
 	<script src="{{ url_for('static', filename='js/preview_popup.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/publish.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/lib/lassocrop_yc.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('static', filename='js/preview_popup_yc.js') }}" type="text/javascript"></script>
-	<script src="{{ url_for('static', filename='js/publish_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/lib/lassocrop.min.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/preview_popup.min.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/publish.min.js') }}" type="text/javascript"></script>
 	{% endif%}
 {% endblock %}
 
