--- a/src/imageserver/templates/simple_view.html
+++ b/src/imageserver/templates/simple_view.html
@@ -27,7 +27,7 @@
 	{% if settings.DEBUG %}
 	<script src="{{ url_for('static', filename='js/simple_view.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/simple_view_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/simple_view.min.js') }}" type="text/javascript"></script>
 	{% endif %}
 
 	<script type="text/javascript">
