--- a/src/imageserver/templates/slideshow_view.html
+++ b/src/imageserver/templates/slideshow_view.html
@@ -26,7 +26,7 @@
 	{% if settings.DEBUG %}
 	<script src="{{ url_for('static', filename='js/slideshow_view.js') }}" type="text/javascript"></script>
 	{% else %}
-	<script src="{{ url_for('static', filename='js/slideshow_view_yc.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/slideshow_view.min.js') }}" type="text/javascript"></script>
 	{% endif %}
 	
 	<script type="text/javascript">
