--- a/src/imageserver/templates/canvas_view_js.html
+++ b/src/imageserver/templates/canvas_view_js.html
@@ -3,6 +3,7 @@
 
 {% if settings.DEBUG %}
 <script src="{{ url_for('static', filename='js/canvas_view.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/common_view.js') }}" type="text/javascript"></script>
 {% else %}
 <script src="{{ url_for('static', filename='js/canvas_view.min.js') }}" type="text/javascript"></script>
 {% endif %}
