--- a/src/imageserver/templates/gallery_view.html
+++ b/src/imageserver/templates/gallery_view.html
@@ -27,6 +27,7 @@
 	{% if settings.DEBUG %}
 	<script src="{{ url_for('static', filename='js/canvas_view.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/gallery_view.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/common_view.js') }}" type="text/javascript"></script>
 	{% else %}
 	<script src="{{ url_for('static', filename='js/canvas_view.min.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/gallery_view.min.js') }}" type="text/javascript"></script>
